chnages july 2018 publis

--- a/EnglishVersion.html
+++ b/EnglishVersion.html
@@ -70,33 +70,33 @@
     <img src="img/photos/14.jpg" width="130" class="floatLeft">
         </div>
         <p>
-  	      I'm a visiting assistant professor in the Applied Math Unit at the University of California Merced. <br><br>
-		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and I started to work on integral representation methods for close evaluation problems.<br>
-		  <br>
- 		 I did my PhD in applied mathematics under the direction of <a href="http://uma.ensta-paristech.fr/~bonnet"
-       title="Bonnet Anne Sophie"> Anne-Sophie Bonnet BenDhia </a> and <a href="http://www.ensta-paristech.fr/~ciarlet/"
-       title="Ciarlet Patrick"> Patrick Ciarlet</a>, at team POems (ENSTA ParisTech, France), worked with <a href="http://www.cmapx.polytechnique.fr/~chesnel/"title="Lucas Chesnel"> Lucas Chesnel </a> as a post-doc in team DEFI (CMAP, France), and currently collaborate with <a href="http://faculty.ucmerced.edu/adkim/"
-  	    title="Arnold Kim"> Arnold Kim </a> and <a href="http://faculty.ucmerced.edu/skhatri3/"
-  	    title="Arnold Kim"> Shilpa Khatri </a> at UC Merced.
-		<br><br>
-
-        </p>
-        <div>
-			  <img src="img/summary_pmls.png" width="210" align ="left" hspace = "5">
-    <img src="img/Triangle_Tconform.jpg" width="150" hspace = "5">
-	    <img src="img/vp.jpg" width="140" hspace = "5">
-	    <img src="img/bie_test_helmholtz.png" width="150" align ="right" >
+  	      I'm assistant professor in the Applied Math Unit at the University of California Merced.
+		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
+		     </p>
+          <div>
+  			  <img src="img/summary_pmls.png" width="210" align ="left" hspace = "5">
+      <img src="img/Triangle_Tconform.jpg" width="150" hspace = "5">
+  	    <img src="img/vp.jpg" width="140" hspace = "5">
+  	    <img src="img/bie_test_helmholtz.png" width="150" align ="right" >
 	
 		 
-        </div>
-		
-			<br><br>
+          </div
+		  
+		  <br>
+ 		 Collaborators:
+		 <li>Vrushali Bokil (OSU)</li>
+		 <li>Anne-Sophie Bonnet BenDhia (POEMS)</li>
+		 <li>Lucas Chesnel (DEFI)</li>
+		 <li>Patrick Ciarlet (POEMS)</li>
+		 <li>Shilpa Khatri (UCM)</li>
+		 <li>Arnold D. Kim (UCM)</li>
+		 <li>Claire Scheid (NACHOS)</li>
   	<h1> Contact</h1>
 	
   	<p>
   		 carvalho0camille AT gmail.com <br>
 		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
-		 Office hours: Thursday 3pm-5pm <br>
+		 Office hours Fall 2018: TBA <br>
   	</p>
 
 
