--- a/publis.html
+++ b/publis.html
@@ -79,17 +79,21 @@
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">
   				<li >
+  					Close evaluation for layer potentials in three dimensions, <br>
+  			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
+  				</li>
+  				<li >
   					Asymptotic analysis for close evaluation for layer potentials, <br>
   			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, Journal of Computational Physics, 655, pp 327-341, 2018. </span>
   				</li>
+	  			<li >
+	  				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,<br>
+	  			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho, <span class='author'>P. Ciarlet Jr.</span>, Numerische Mathematik, pp 1-38, 2018.
+	  			</li>	
   				<li >
   					Eigenvalue problems with sign-changing coefficients,<br>
   			 <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, Compte Rendus Mathématiques, 355 (6), pp 671-675, 2017. </span>
   				</li>
-  			<li >
-  				Mesh requirements for the finite element approximation of problems with sign-changing coefficients,<br>
-  			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho, <span class='author'>P. Ciarlet Jr.</span>, Numerische Mathematik, pp 1-38, 2017.
-  			</li>	
   			<li >
   				On the use of Perfectly Matched Layers at corners for scattering problems with sign-changing coefficients,<br>
   			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, Journal of Computational Physics, 322, pp 224-247, 2016. </li>		
@@ -125,8 +129,9 @@
 				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
-  				<li >Accurate evaluation of electromagnetic near-field in plasmonic structures, ICERM Workshop, Providence, 2018.</li>					 			
-   				<li >Multiscale modeling to capture near-fields in plasmonic structures, SIAM Annual Meeting, Portland, 2018.</li>		
+				<li >The Singular Complement Method for scattering problems in plasmonic structures, PIERS, Toyama, 2018.</li>	
+				<li >Multiscale modeling to capture near-fields in plasmonic structures, SIAM Annual Meeting, Portland, 2018.</li>	
+  				<li >Accurate evaluation of electromagnetic near-field in plasmonic structures, ICERM Workshop, Providence, 2018.</li>					 	
 				<li >Close evaluation of layer potentials, IRMAR seminar, Rennes, 2018.</li>	
    				<li >Mesh requirements for transmission problems with sign-changing coefficients, SIAM PD17, Baltimore, 2017.</li>		
   				<li >Local analysis of near-fields in acoustic scattering, WAVES, Minneapolis, 2017.</li>	
