--- a/publis.html
+++ b/publis.html
@@ -131,7 +131,9 @@
   			<ol class='publisItems' reversed = "">
 				<li >The Singular Complement Method for scattering problems in plasmonic structures, PIERS, Toyama, 2018.</li>	
 				<li >Multiscale modeling to capture near-fields in plasmonic structures, SIAM Annual Meeting, Portland, 2018.</li>	
-  				<li >Accurate evaluation of electromagnetic near-field in plasmonic structures, ICERM Workshop, Providence, 2018.</li>					 	
+  				<li >Accurate evaluation of electromagnetic near-field in plasmonic structures, ICERM Workshop, Providence, 2018.
+				<a href="https://brown.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=8fb63800-8f8a-4e8f-b9cf-a9050105bee3"title="ICERM">[Video of the talk]</a>
+				</li>					 	
 				<li >Close evaluation of layer potentials, IRMAR seminar, Rennes, 2018.</li>	
    				<li >Mesh requirements for transmission problems with sign-changing coefficients, SIAM PD17, Baltimore, 2017.</li>		
   				<li >Local analysis of near-fields in acoustic scattering, WAVES, Minneapolis, 2017.</li>	
