--- a/publis.html
+++ b/publis.html
@@ -78,6 +78,9 @@
 			
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">
+				Asymptotic approximations for the close evaluation of double-layer potentials, <br>
+		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
+			</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, <br>
   			 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
@@ -129,6 +132,7 @@
 				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+				<li >Numerical methods for light scattering in plasmonic structures with corners, INRIA Sophia-Antipolis, NICE, 2018.</li>	
 				<li >The Singular Complement Method for scattering problems in plasmonic structures, PIERS, Toyama, 2018.</li>	
 				<li >Multiscale modeling to capture near-fields in plasmonic structures, SIAM Annual Meeting, Portland, 2018.</li>	
   				<li >Accurate evaluation of electromagnetic near-field in plasmonic structures, ICERM Workshop, Providence, 2018.
