add new page called group, modified header for all pages

--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
 
       <!-- #menu: topbar menu of the site.  Use the helper classes .two, .three, .four and .five to set
                   the widths for 2, 3, 4 and 5 item menus. -->
-          <ul id="menu" class="five">
+          <ul id="menu" class="six">
             <li><a href="index.html" title="Home"><span class="big">H</span>ome</a></li>
             <li><a href="Research.html" title="Research"><span class="big">R</span>esearch</a></li>
   		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
             <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
             <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
+			 <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
           </ul>
     
 
