--- a/group.html
+++ b/group.html
@@ -60,48 +60,44 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		  <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		   <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
         </ul>
-   
 
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
-      <h1>CV 					
-<span >&nbsp;&nbsp;</span> [ <a href="Dr_carvalho_CV_2018.pdf" title='charger Dr_carvalho_CV_2018.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
-	  
-<h2>2018-</h2>
-  <ul>
-<li>Assistant professor at UC Merced</li>
-  </ul>
-<h2>2017-2018: VAP</h2>
-  <ul>
-<li>Visiting assistant professor at UC Merced</li>
-  </ul>
-
-	  <h2>2016-2017: Postdoctoral fellow and VAP </h2>
-	    <ul>
-	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li> <br>
-	  <li>07/16-06/17 : Visiting assistant professor at UC Merced</li>
-	    </ul>
-		
-      <h2>2012-2015: Ph.D</h2>
-     <ul>
-	<li>PhD in applied mathematics at the Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
-     </ul>
-      <h2>2009-2012: ENSTA ParisTech engineer school cursus, M.S. in Applied Math</h2>
-
-     <ul>
-	<li>2011-2012: thrid year at ENSTA ParisTech specialized in Modelization and Simulation, Master 2 AN&EDP at Université Pierre et Marie Curie</li> <br>
-	<li>2010-2011: second year at ENSTA ParisTech specialized in Mathematical Engineering Simulation </li> <br>
-	<li>2009-2010: first year at ENSTA ParisTech  </li>
-      </ul>
-      <h2>2006-2009: Classes préparatoires </h2>
-	<li>Preparation for engineer school entrance exams, (PCSI, PC*) at lycée Pierre de Fermat (Toulouse) </li>
+     	 <h1>Group</h1>
 
 
+   		 Current students: <br>
+  		 <li>Elsie Cortes (undergraduate)</li>
+  		 <li>Bianca Garibay (undergraduate)</li>
+		 <li>Lori Lewis (graduate, co-advised)</li>
 
+		 Alumni: <br>
+		 <li>Barbara Gomez-Aldrete (undergraduate, UROC program, co-advised)</li>
+		 <li>Xiaolong Chen (undergraduate)</li>
+		 <li>Jacob Stehle (undergraduate, co-advised)</li>
+
+
+       
+
+	
+   
+  <!--
+  <object id="VIDEO" type="video/x-ms-wmv" data="avecPML.wmv" width="360" height="270">
+          <param name="src" value="avecPML.wmv" />
+          <param name="autostart" value="1" /> 
+          <param name="width" value="360" />
+          <param name="height" value="270" />
+          <param name="repeat" value="-1" />
+          <param name="showcontrols" value="true" />
+                  <embed src="avecPML.wmv" width="360" height="270"></embed> 
+              </object>  -->
+  		 
+  
+	
 
 
       <!-- .footer: the site footer text, links and whatever else -->
