--- a/publis.html
+++ b/publis.html
@@ -134,6 +134,8 @@
 				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+				<li >Capturing near-fields in plasmonic structures with corners, BASCD, Livermore, 2018.</li>	
+				<li >Asymptotic approximations of near fields in scattering problems, Tulane University, New Orleans, 2018.</li>	
 				<li >Numerical methods for light scattering in plasmonic structures with corners, INRIA Sophia-Antipolis, NICE, 2018.</li>	
 				<li >The Singular Complement Method for scattering problems in plasmonic structures, PIERS, Toyama, 2018.</li>	
 				<li >Multiscale modeling to capture near-fields in plasmonic structures, SIAM Annual Meeting, Portland, 2018.</li>	
