edit teaching index and group

--- a/group.html
+++ b/group.html
@@ -71,14 +71,15 @@
 
 
    		 Current students: <br>
-  		 <li>Elsie Cortes (undergraduate)</li>
-  		 <li>Bianca Garibay (undergraduate)</li>
-		 <li>Lori Lewis (graduate, co-advised)</li>
+  		 <li>Elsie Cortes (undergraduate student)</li>
+		 <li>Lori Lewis (master's student, co-advised)</li>
+		 <li>Matteo Polimeno (graduate student)</li>
 
 		 Alumni: <br>
-		 <li>Barbara Gomez-Aldrete (undergraduate, UROC program, co-advised)</li>
-		 <li>Xiaolong Chen (undergraduate)</li>
-		 <li>Jacob Stehle (undergraduate, co-advised)</li>
+		 <li>Bianca Garibay (undergraduate student)</li>
+		 <li>Barbara Gomez-Aldrete (undergraduate student, UROC program, co-advised)</li>
+		 <li>Xiaolong Chen (undergraduate student)</li>
+		 <li>Jacob Stehle (undergraduate student, co-advised)</li>
 
 
        
