--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   	<p>
   		 ccarvalho3 AT ucmerced dot edu <br>
 		 UC Merced, 5200 N Lake Rd, Merced CA 95343 <br>
-		 Office hours Fall 2018: TBA
+		 Office hours Fall 2019: Monday 1:30pm-3:30pm in ACS 352
 		 	  </p>
 			  
 			
