--- a/Teaching.html
+++ b/Teaching.html
@@ -66,20 +66,26 @@
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
+		<h2>Fall 2019 </h2>
+        <ul>
+		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2164"> Math 122</a>: complex analysis, at UC Merced</li>
+  		<h2>Spring 2019 </h2>
+          <ul>
+  		  <li>Instructor for <a href="https://catalog.ucmerced.edu/preview_course_nopop.php?catoid=6&coid=12511"> Math 150</a>: Mathematical modeling, at UC Merced</li>
 		<h2>Spring 2018 </h2>
         <ul>
-		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (third year), at UC Merced</li>
+		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
 		  <li> <a href="https://carvalhocamille.github.io/math-131/" title="Github"><span class="big">G</span>ithub repository with lecture notes</a></li>
 	  </ul>
 		 
 		<h2>Fall 2017 </h2>
         <ul>
-    	  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
-		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers (third year), at UC Merced</li>
+    	  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
+		  <li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2167"> Math 131</a>: Numerical Analysis for Engineers, at UC Merced</li>
          </ul>
 		<h2>Fall 2016 - Spring 2017 </h2>
         <ul>
-    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus (first-second year), at UC Merced</li>
+    	<li>Instructor for <a href="http://catalog.ucmerced.edu/preview_course_nopop.php?catoid=2&coid=2154"> Math 23</a>: Vector Calculus, at UC Merced</li>
          </ul>
 
 		<h2>2015-2016 </h2>
