--- a/publis.html
+++ b/publis.html
@@ -130,10 +130,14 @@
   			<span class='author'>A.-S. Bonnet-Ben Dhia</span>, <span class='author'>C. Carvalho</span>, <span class='author'>L. Chesnel, <span class='author'>P. Ciarlet Jr.</span>, <span class='author'>X. Claeys</span>, WAVES, Tunis, 2013. </li>		
 
 				
-			</ol>
-				
+			</ol>				
   			<h1 >Talks</h1>
   			<ol class='publisItems' reversed = "">
+			<li >The Singular Complement Method for dielectric-metamaterial transmission problems, MAFELAP, London, 2019.</li>
+			<li >Asymptotic approximations for transmission boundary-value problems in plasmonic structures, EMTS, San Diego, 2019.</li>
+			<li >Asymptotic approximations of near-fields in plasmonic structures, AMS Spring and Central and Western Sectional Meeting, Hawaii, 2019.</li>
+			<li>Accurate evaluation of near-fields in plasmonic structures, Delaware, 2019.</li>
+			<li>Accurate evaluation of near-fields in plasmonic structures, Caltech, 2019.</li>
 				<li >Capturing near-fields in plasmonic structures with corners, BASCD, Livermore, 2018.</li>	
 				<li >Asymptotic approximations of near fields in scattering problems, Tulane University, New Orleans, 2018.</li>	
 				<li >Numerical methods for light scattering in plasmonic structures with corners, INRIA Sophia-Antipolis, NICE, 2018.</li>	
