--- a/transmission.html
+++ b/transmission.html
@@ -60,49 +60,57 @@
 		  <li><a href="publis.html" title="publis"><span class="big">P</span>ublications</a></li>
           <li><a href="Teaching.html" title="Teaching"><span class="big">T</span>eaching</a></li>
           <li><a href="cursusEN.html" title="CursusEN"><span class="big">C</span>V</a></li>
-		  <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
+		   <li><a href="group.html" title="Group"><span class="big">G</span>roup</a></li>
         </ul>
-   
 
 
     <!-- #page: holds all page content, as well as footer -->
     <div id="page">
 
-      <h1>CV 					
-<span >&nbsp;&nbsp;</span> [ <a href="CV_carvalho.pdf" title='charger 
-cv_carvalho.pdf' style='text-decoration: none; z-index:100; bottom: -0.4ex;' class='iconButton loadButton'> PDF </a> ] &nbsp;&nbsp; </h1>
-	  
-<h2>2018-</h2>
-  <ul>
-<li>Assistant professor at UC Merced</li>
-  </ul>
-<h2>2017-2018: VAP</h2>
-  <ul>
-<li>Visiting assistant professor at UC Merced</li>
-  </ul>
+     	 <h1>Boundary integral methods for optical cloaking</h1>
 
-	  <h2>2016-2017: Postdoctoral fellow and VAP </h2>
-	    <ul>
-	  <li>02/16-06/16 : Post-doctoral fellow at team DEFI (CMAP), numerical investigation of transmission eigenvalues for the interior transmission problem.</li> <br>
-	  <li>07/16-06/17 : Visiting assistant professor at UC Merced</li>
-	    </ul>
+  <h4>Framework</h4>
 		
-      <h2>2012-2015: Ph.D</h2>
-     <ul>
-	<li>PhD in applied mathematics at the Unité de Mathématiques Appliquées, ENSTA ParisTech</li>
-     </ul>
-      <h2>2009-2012: ENSTA ParisTech engineer school cursus, M.S. in Applied Math</h2>
+      <p>
+	Optical cloaking refers to light propagating in heterogeneous media whereas measurements do not detect heterogeneities, in other words there is no light scattering. One main motivation is to be able to cloak objects by using layers of different materials around the cloaked object. 
+	 </p>
+	<img src="img/cloaking1.png" width="300">
+	  <p>
+	We develop a Python code to perform cloaking and scattering in layered media (in particular concentric layers) using boundary integral equations methods. 
+	 </p>
 
-     <ul>
-	<li>2011-2012: thrid year at ENSTA ParisTech specialized in Modelization and Simulation, Master 2 AN&EDP at Université Pierre et Marie Curie</li> <br>
-	<li>2010-2011: second year at ENSTA ParisTech specialized in Mathematical Engineering Simulation </li> <br>
-	<li>2009-2010: first year at ENSTA ParisTech  </li>
-      </ul>
-      <h2>2006-2009: Classes préparatoires </h2>
-	<li>Preparation for engineer school entrance exams, (PCSI, PC*) at lycée Pierre de Fermat (Toulouse) </li>
+	 <div>
+		  <img src="img/bie_plasmon.png" width="600"><br>	
+		 Scattering problem by a plane wave of a metallic inclusion. Left: using standard Periodic Trapezoid Rule. Right: using asymptotic approximation method (more information <a href="eval.html"title="eval">here</a>)
+	 </div>	
+	 
+	   <h4>References </h4>
+	<li >
+		Codes available on <a href="https://github.com/eangelcortes/boundary_cloaking"title="GitHub">GitHub.</a>
+	</li>
+		
+		<h4>Ongoing projects: </h4>
+		 <li>Develop a multi-layered transmission problem code</li>
+		 <li>Cloaking optimization</li>
 
 
+			       
 
+	
+   
+  <!--
+  <object id="VIDEO" type="video/x-ms-wmv" data="avecPML.wmv" width="360" height="270">
+          <param name="src" value="avecPML.wmv" />
+          <param name="autostart" value="1" /> 
+          <param name="width" value="360" />
+          <param name="height" value="270" />
+          <param name="repeat" value="-1" />
+          <param name="showcontrols" value="true" />
+                  <embed src="avecPML.wmv" width="360" height="270"></embed> 
+              </object>  -->
+  		 
+  
+	
 
 
       <!-- .footer: the site footer text, links and whatever else -->
