--- a/index.html
+++ b/index.html
@@ -75,10 +75,11 @@
   		  I'm interested in developing new efficient numerical methods for interface problems, specially in electromagnetics and in plasmonics. I work on wave propagation phenomena and related problems. I have been developing a finite-element based method to accurately capture the near-field in plasmonic structures, and work on integral representation methods for close evaluation problems.<br><br> <br>
   		     </p>
             <div>
-    		<img src="img/summary_pmls.png" width="210" align ="left" hspace = "5">
-            <img src="img/Triangle_Tconform.jpg" width="150" hspace = "5">
-    	    <img src="img/vp.jpg" width="140" hspace = "5">
-    	    <img src="img/bie_test_helmholtz.png" width="150" align ="right" >
+    		<a href="FEM.html"><img src="img/summary_pmls.png" width="190"></a>
+            <a href="FEM.html"><img src="img/Triangle_Tconform.jpg" width="150"></a>
+			<a href="eval.html"><img src="img/bie_test_helmholtz.png" width="150"></a>
+    	    <a href="transmission.html"><img src="img/bie2.png" width="150" ></a>
+    	    
 	
 		 
 		</div>
