--- a/group.html
+++ b/group.html
@@ -70,17 +70,20 @@
      	 <h1>Group</h1>
 
 
-   		 Current students: <br>
+   		<h4>Current students</h4>
   		 <li>Elsie Cortes (undergraduate student)</li>
 		 <li>Lori Lewis (master's student, co-advised)</li>
 		 <li>Matteo Polimeno (graduate student)</li>
 
-		 Alumni: <br>
+		 <h4>Alumni</h4>
 		 <li>Bianca Garibay (undergraduate student)</li>
 		 <li>Barbara Gomez-Aldrete (undergraduate student, UROC program, co-advised)</li>
 		 <li>Xiaolong Chen (undergraduate student)</li>
 		 <li>Jacob Stehle (undergraduate student, co-advised)</li>
 
+
+		 <h4>Our mascott</h4>
+		 <img src="img/photos/guy.jpg" width="200">
 
        
 
