--- a/group.html
+++ b/group.html
@@ -72,8 +72,10 @@
 
    		<h4>Current students</h4>
   		 <li>Elsie Cortes (undergraduate student)</li>
+		 <li>Benjamin Latham (graduate student)</li>
 		 <li>Lori Lewis (master's student, co-advised)</li>
 		 <li>Matteo Polimeno (graduate student)</li>
+		 <li>Ryan Torres(undergraduate student)</li>
 
 		 <h4>Alumni</h4>
 		 <li>Bianca Garibay (undergraduate student)</li>
