--- a/publis.html
+++ b/publis.html
@@ -79,9 +79,13 @@
 			
 			<a href="https://scholar.google.fr/citations?hl=en&view_op=list_works&gmla=AJsN-F4s6Y5QfmzaG85bYE_3YjvOyf9d7RSY2SOELSdv1tAIyT6rGNfTbWsTTIZpCHOfCP1fHl9ldsp1P8aZisVi00sOdwea3Q&user=RY1F4S8AAAAJ" title="Scholar"><span class="big">P</span>ublications listed on Google Scholar</a>
   			<ol class='publisItems' reversed = "">
+				<li >
+					A fully fourth order accurate energy stable FDTD method for Maxwell's equations in metamaterials, <br>
+			 <span class='author'>P. Sakkaplangkul</span>, <span class='author'>V. Bokil</span>, <span class='author'>C. Carvalho</span>, in revision. </span>
+				</li>
 			<li >
 				Asymptotic approximations for the close evaluation of double-layer potentials, <br>
-		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, submitted. </span>
+		 <span class='author'>C. Carvalho</span>, <span class='author'>S. Khatri</span>, <span class='author'>A. D. Kim</span>, in revision. </span>
 			</li>
   				<li >
   					Close evaluation for layer potentials in three dimensions, <br>
